# ProtoChatRs

./: .gitignore  Cargo.toml  build.rs
protos/: messages.proto
src/: client.rs  server.rs
