[package]
name = "multi_chat"
version = "0.1.0"
authors = ["TamirCohen <tamir@tamirc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
protobuf = { version = "2"}
futures = "0.3.12"

[build-dependencies]
protoc-rust = "2.0"

[[bin]]
name = "proto_server"
path = "src/server.rs"

[[bin]]
name = "proto_client"
path = "src/client.rs"